finished swagger and corrected expire date bug.
